feat: adiciona lógica de controle de criação de orçamentos e validação de aceitação com confirmação
